missing links and preview image

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <!-- To include Spanish accents -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
+    <!--Fb preview image-->
+    <meta property="og:image" content="static/images/previewImage.png" />
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149667597-3"></script>
@@ -61,11 +63,11 @@
             <p class="coolButtonTexts">¿Cómo afectará el desarrollo a los recursos hídricos de las ciudades?</p>
         </div>
         <div class="w3-quarter">
-          <button class="coolButtonSmall" onClick="location.href='futuroResultados.html';">Diagnóstico de riesgo epidemiológico</button>
+          <button class="coolButtonSmall" onClick="location.href='saludPEM.html';">Diagnóstico de riesgo epidemiológico</button>
           <p class="coolButtonTexts">¿Cómo afectará el desarrollo al hábitat de los mosquitos portadores del dengue?</p>
         </div>
         <div class="w3-quarter">
-          <button class="coolButtonSmall" onClick="location.href='futuroResultados.html';">Diagnóstico de riesgo de inundaciones</button>
+          <button class="coolButtonSmall" onClick="location.href='floodPEM.html';">Diagnóstico de riesgo de inundaciones</button>
           <p class="coolButtonTexts">¿Cuál es el papel del capital natural en la reducción de los picos de inundación y los riesgos de inundación para las comunidades?</p>
         </div>
         <div class="w3-quarter">
