--- a/about.html
+++ b/about.html
@@ -55,6 +55,11 @@
 </div>
 
 <div class="w3-row w3-container">
+	<h2><i class="material-icons icon">important_devices</i> Visualizador PROAgua </h2>
+	<p>El Visualizador es una herramienta que permite presentar los resultados del proyecto PROAgua con una visión completa del manejo integral de la cuenca hidrográfica, considerando los servicios ecosistémicos, el cambio de uso del suelo, la deforestación, las inundaciones, la restauración minera, diagnóstico epidemiológico, diagnóstico hídrico, ordenamiento territorial entre los temas más importantes, y de esta manera  fortalecerá  la gestión multisectorial mejorando el Plan Regional de Producción baja en emisiones,  apoyara la Gestión de las cuencas de Madre de Dios y Amazonía peruana, apoyara a la  Gobernación Regional para que se  incorpore en su estrategia de desarrollo los servicios ecosistémicos, las  autoridades locales pueden  incorporar a sus planes de desarrollo y de uso del suelo los resultados aquí presentados, por otra parte también EMAPAT y SUNASS se fortalecerán en su generación del  Plan de Inversiones para manejo de los MERESE (Mecanismos de retribución por servicios ecosistémicos).</p>
+</div>
+
+<div class="w3-row w3-container">
 		<img src="static/photos/equipo.JPG" alt="Equipo PRO Agua" />
 </div>
 
