--- a/html/pickEscenario.html
+++ b/html/pickEscenario.html
@@ -29,7 +29,7 @@
                   onchange="updateMap2(mode,'Real')"
                   autocomplete="off"
                 />
-                <label for="b_radio-2">Futuro Eco-Turismo</label>
+                <label for="b_radio-2">Futuro Real</label>
               </div>
               <div class="input-radio">
                 <input
