--- a/html/pickEscenario_new.html
+++ b/html/pickEscenario_new.html
@@ -1,21 +1,8 @@
-
-
-<!--<div id="radio_container" style="font-size: 1.5vh;">
-    <div class="scenario-field">
-        <input type="radio" id="btnSost" name="escenarios" value="Sost" onchange="updateMap2(mode,'Sost')" checked >
-        <label for="btnSost">Sostenible</label>
-        <input type="radio" id="btnReal" name="escenarios" value="Real" onchange="updateMap2(mode,'Real')"  />
-        <label for="btnReal">Eco-Turismo</label>
-        <input type="radio" id="btnPeor" name="escenarios" value="Peor" onchange="updateMap2(mode,'Peor')"  />
-        <label for="btnPeor">Peor</label>
-    </div>    
-</div>-->
-
 <label class="escenarios-field">Sostenible
     <input type="radio" checked="checked" name="escenarios"value="Sost" onchange="updateMap2(mode,'Sost')" >
     <span class="checkmark"></span>
 </label>
-<label class="escenarios-field">Eco-Turismo
+<label class="escenarios-field">Real
     <input type="radio" name="escenarios" value="Real" onchange="updateMap2(mode,'Real')">
     <span class="checkmark"></span>
 </label>
