--- a/MAP_old.html
+++ b/MAP_old.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" type="text/css" href="css/w3.css" />
     <link
       rel="stylesheet"
-      href="https://www.w3schools.com/lib/w3-theme-black.css"
+      href="https://www.<link rel="stylesheet" href="css/w3-black-theme.css" />ools.com/lib/w3-theme-black.css"
     />
 
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script>
