--- a/futuroTAH.html
+++ b/futuroTAH.html
@@ -16,7 +16,7 @@
 
     <!-- Needed for Navbar-->
     <link rel="stylesheet" href="css/dropdown.css" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="css/w3.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/overlay.css" />
     <script src="lib/js/includehtml.js"></script>
@@ -34,8 +34,8 @@
 
     <!-- Libs -->
     <!-- w3 style thingz -->
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css"/>
+    <link rel="stylesheet" href="css/w3.css" />
+    <link rel="stylesheet" href="css/w3-black-theme.css" />
      <!-- icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"/>
      <!-- tachyons -->
