--- a/wwf.html
+++ b/wwf.html
@@ -10,7 +10,7 @@
     <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="css/w3.css" />
     <link rel="stylesheet" href="css/overlay.css" />
     <script src="lib/js/includehtml.js"></script>
     <!-- About Overlay -->
