--- a/html/navbar.html
+++ b/html/navbar.html
@@ -16,23 +16,7 @@
         Región de Puerto Maldonado 
       </a>
       <!-- Below: Will be hidricoTAH.html --> 
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Región de Tahuamanu-Cobija 
-      </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Descargar Resultados 
-      </a>
-      </div>
-    </div>
-
-    <div class="dropdown bg-black pa3">
-      Diagnóstico epidemiológico
-      <div class="dropdown-content bg-black white pa3">    
-      <a href="saludPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Región de Puerto Maldonado 
-      </a>
-      <!-- Below: Will be saludTAH.html --> 
-      <a href="saludTAH.html"  class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"> 
+      <a href="hidricoTAH.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Región de Tahuamanu-Cobija 
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
@@ -54,6 +38,22 @@
       <!-- Below: Will be floodTAH.html --> 
       <a href="floodTAH.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Acre-Purus cuenca
+      </a>
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+        Descargar Resultados 
+      </a>
+      </div>
+    </div>
+
+    <div class="dropdown bg-black pa3">
+      Diagnóstico epidemiológico
+      <div class="dropdown-content bg-black white pa3">    
+      <a href="saludPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+        Región de Puerto Maldonado 
+      </a>
+      <!-- Below: Will be saludTAH.html --> 
+      <a href="saludTAH.html"  class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"> 
+        Región de Tahuamanu-Cobija 
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Descargar Resultados 
