--- a/html/pickYear.html
+++ b/html/pickYear.html
@@ -4,9 +4,9 @@
   <div class="switch-field">
     <input type="radio" id="radio-three" name="yr" value="10" onchange="changeYr()" >
     <label for="radio-three">10 años</label>
-    <input type="radio" id="radio-four" name="yr" value="50" onchange="changeYr()" checked />
+    <input type="radio" id="radio-four" name="yr" value="50" onchange="changeYr()" />
     <label for="radio-four">50 años</label>
-    <input type="radio" id="radio-five" name="yr" onchange="changeYr()" value="100" />
+    <input type="radio" id="radio-five" name="yr" onchange="changeYr()" value="100" checked />
     <label for="radio-five">100 años</label>
 </div>
                     
