new text dengue

--- a/html/tab_methodE.html
+++ b/html/tab_methodE.html
@@ -1,32 +1,5 @@
-<!-- to embed : 
-	<div w3-include-html="html/tab_method.html"></div>
--->
-<h1>TODO</h1>
-
-<p>
-	<a href='https://naturalcapitalproject.stanford.edu/invest/' target='_blank'>InVEST</a> es un conjunto de modelos de software de código abierto que se utilizan para mapear y valorar los bienes y servicios de la naturaleza que sustentan y satisfacen la vida humana.
-</p>
-
-<div class='w3-row'>
-
-	<div class="w3-twothird">
-		<small><ul>
-			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/sdr.html' target='_blank'>InVEST Sedimentos</a></li>
-			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/seasonal_water_yield.html' target='_blank'>InVEST Rendimiento de Agua</a></li>
-			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/carbonstorage.html' target='_blank'>InVEST Carbono</a></li>
-			<li><a href='http://data.naturalcapitalproject.org/nightly-build/invest-users-guide/html/recreation.html' target='_blank'>InVEST Turismo</a></li>
-		</ul></small>
-	</div>
-
-	<div class="w3-third">
-		<img src="static/logos/InVEST.png" height="80px" alt="InVEST"/>
-	</div>
-</div>
-
-<br>
-<div>
-<p><a href='https://docs.google.com/document/d/1zCunHsRvfcg6uurF3PoLlSgqjG4zP4Vta3AEVqWW8FI/edit?usp=sharing' target='_blank'>Metodologías de procesamiento de datos y los hypotesis (equipo SIG Pro Agua)</a></p>
-</div>
+<h5>Método</h5>
+<p>Pronosticamos el riesgo futuro de transmisión del Dengue en MdD en tres pasos. Primero, estimamos la abundancia de Aedes aegypti en todo el departamento  de  MdD mediante el uso de un modelo de distribución de especies en dos partes. Nuestro modelo utiliza datos de cobertura vegetal, clima (temperatura y precipitación) y población humana de MdD para estimar el número de Aedes aegypti en la región. Luego, usamos los estimados de Aedes aegypti recuentos del primer modelo como un predictor en un modelo para estimar el riesgo de Dengue, que se basa en los casos de Dengue observados en todo MdD en 2019. Finalmente, utilizamos el modelo de Dengue para predecir el riesgo de Dengue en MdD en 2035 utilizando el uso previsto del suelo, el clima y la población humana. Estos tres pasos se describen brevemente a continuación, sin embargo, una explicación más detallada de los métodos, advertencias del modelo y resultados adicionales están disponibles en <a href="https://osf.io/3gbkh/" target="_blank">el documento</a> Modelamiento de Dengue en Madre de Dios  (en inglés).</p>
 
 <h4> Servicios Ecosistémicos </h4>
 <div w3-include-html="html/tab_servicios.html"></div>
