added links to data and fixed styling charts

--- a/futuroResultados.html
+++ b/futuroResultados.html
@@ -58,6 +58,12 @@
     <div class="w3-half" style="padding-left: 40px; display: block;">
       <h3 style="color: #7fc46f; margin-bottom: 0;">Diagnóstico hídrico</h3>
       <ul>
+        <li><a href="https://drive.google.com/file/d/1dvtNhUEod2YvEHXL2GSaoHa1TSJF4GwD/view?usp=sharing" target="_blank">
+          Shapefile - Riesgo Región de Puerto Maldonado </a></li>
+        <li><a href="https://drive.google.com/file/d/1boQ2CD_LuaBhwsnCOJ9eRy0qLDuX50-C/view?usp=sharing" target="_blank">
+          Shapefile - Riesgo Región de Tahuamanu-Cobija </a></li>
+        <li><a href="https://drive.google.com/file/d/1ovqp6AkkRXmA26TT5VFTrw5QAnwTGcnI/view?usp=sharing" target="_blank">
+          Las tablas  </a></li>
         
       </ul>
     </div>
@@ -69,6 +75,8 @@
           Raster - Riesgo Región de Puerto Maldonado </a></li>
         <li><a href="https://drive.google.com/drive/folders/1P9mhnxmaSoyf6qC5ADS6lfwCrhRqxXZI" target="_blank">
           Raster - Riesgo Región de Tahuamanu-Cobija </a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/1kEd3vrh03_rQujkRGdSSjQ3Qat4V21CLxQJ-cfdVLdg/edit?usp=sharing" target="_blank">
+            Las tablas  </a></li>
 
       </ul>
     </div>
@@ -83,6 +91,10 @@
           Shapefile - Riesgo Región de Tahuamanu-Cobija </a></li>
         <li><a href="https://drive.google.com/drive/folders/1ihpVgEbDdkeYQVzDgsUGWTXX1SRQb8EX" target="_blank">
           Shapefile - Datos regionales completos </a></li>  
+        <li><a href="https://drive.google.com/file/d/1Nso_YkdHIqsGruo_i6YinsRaNbKlTdva/view?usp=sharing" target="_blank">
+            Las tablas </a></li>  
+
+          
 
         <li><a href="https://drive.google.com/drive/folders/1rMst0Ld2T079hv047D1Yu10llEpqaYHu" target="_blank"> Inundaciones Herencia Trinacional </a></li>
       </ul>
