--- a/html/pickCityTAH.html
+++ b/html/pickCityTAH.html
@@ -7,7 +7,7 @@
     <input type="radio" id="radio-four" name="city" value="Iñapari" onchange="changeCity()" />
     <label for="radio-four">Iñapari</label>
     <input type="radio" id="radio-five" name="city" value="CBE" onchange="changeCity()" />
-    <label for="radio-five">CBE</label>
+    <label for="radio-five">Cobija, Brasileia, Epitaciolândia </label>
 </div>
                     
 </div>
