data for la pampa

--- a/futuroResultados.html
+++ b/futuroResultados.html
@@ -104,7 +104,9 @@
       <h3 style="color: #7fc46f; margin-bottom: 0;">Restauración minera</h3>
       <ul>
         <li><a href="https://drive.google.com/drive/folders/1Boh0kZro1ubxiH_d7F0wKWHXxc8l_7UX" target="_blank">
-          Mineras </a></li>
+          Raster - Escenario futuro en La pampa </a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/1uZH96tMfI0pPdfgvFhJeRqXHMgM_hVBA2HxU5fv0u10/edit?usp=sharing" target="_blank">
+            Las tablas </a></li>  
 
       </ul>
     </div>
