--- a/hidricoTAH.html
+++ b/hidricoTAH.html
@@ -145,7 +145,7 @@
         </div>
       </div>
       <!-- <center><h6 style='margin-top: 0px;'>Impacto en las ciudades</h6></center>-->
-      <div id="controlCity" style="text-align: center;">
+      <div id="controlCity" style="text-align: center; margin-top:1vh;">
         <div  w3-include-html="html/pickCityTAH.html"></div>
       </div>
       <center><h6 style='margin: 0px; font-size: 13px;'>Impacto en Personas rurales y sedimentos</h6></center>
