--- a/hidricoPEM.html
+++ b/hidricoPEM.html
@@ -145,7 +145,8 @@
         </div>
       </div>
       <!-- <center><h6 style='margin-top: 0px;'>Impacto en las ciudades</h6></center>-->
-      <div id="controlCity" style="text-align: center;">
+      
+      <div id="controlCity" style="text-align: center; margin-top:1vh;">
         <div  w3-include-html="html/pickCityPEM.html"></div>
       </div>
       <center><h6 style='margin: 0px;font-size: 13px;'>Impacto en Personas rurales y sedimentos</h6></center>
