imgages and links

--- a/about.html
+++ b/about.html
@@ -143,13 +143,13 @@
 				<div class="center w3-text-grey"><i>Científico, especialista en inundaciones</i></div>
 			</div>
 			<div class="w3-col s4 w3-center">
-				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<img src="static/photos/ca.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 				<h5>Christopher Anderson</h5>
 				<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
 			</div>
 	
 			<div class="w3-col s4 w3-center">
-				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<img src="static/photos/mk.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 				<h5>Morgan Kain</h5>
 				<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
 			</div>
@@ -168,7 +168,7 @@
 				<div class="center w3-text-grey"><i>Desarrolladora del visualizador</i></div>
 			</div>
 			<div class="w3-col s4 w3-center">
-				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<img src="static/photos/sm.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 				<h5>Sydney Moss</h5>
 				<div class="center w3-text-grey"><i>Asistente de Investigación</i></div>
 			</div>
@@ -183,11 +183,6 @@
 				<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 				<h5>Luis Fernandez</h5>
 				<div class="center w3-text-grey"><i>Director Ejecutivo</i></div>
-			</div>
-			<div class="w3-col s4 w3-center">
-				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-				<h5>Luis Fernandez</h5>
-				<div class="center w3-text-grey"><i>Director Nacional </i></div>
 			</div>
 			<div class="w3-col s4 w3-center">
 				<img src="static/photos/mt.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
@@ -214,18 +209,18 @@
 		<center><p>Herencia</p></center>
 		<div class="w3-row">
 			<div class="w3-col s4 w3-center">
-				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<img src="static/photos/jr.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 				<h5>Juan Fernando Reyes</h5>
 				<div class="center w3-text-grey"><i>Director</i></div>
 			</div>
 			<div class="w3-col s4 w3-center">
-				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<img src="static/photos/gr.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 				<h5>Guillermo Rioja Ballivián</h5>
 				<div class="center w3-text-grey"><i>Antropólogo Social, investigador social</i></div>
 			</div>
 			<div class="w3-col s4 w3-center">
-				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-				<h5>Martin de Oliveira</h5>
+				<img src="static/photos/io.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Ivan de Oliveira</h5>
 				<div class="center w3-text-grey"><i>Especialista SIG</i></div>
 			</div>
 			
