--- a/hidricoPEM.html
+++ b/hidricoPEM.html
@@ -75,7 +75,7 @@
               <div id="radio_container" >
                 <div class="switch-field">
                     <input type="radio" id="btnRiesgos" name="mode" value="Hidrico" onchange="switchMode('Hidrico')" checked >
-                    <label for="btnRiesgos">Servicios hídricos</label>
+                    <label for="btnRiesgos">Servicios hidrológicos</label>
                     <input type="radio" id="btnUso" name="mode" value="LU" onchange="switchMode('LU')"  />
                     <label for="btnUso">Uso del suelo</label>
                 </div>      
