--- a/html/navbar.html
+++ b/html/navbar.html
@@ -10,7 +10,7 @@
       <i class='fa fa-home'></i></a>
 
     <div class="dropdown bg-black pa3">
-      Diagnóstico hídrico
+      Diagnóstico hidrológicos
       <div class="dropdown-content bg-black white pa3">    
       <a href="hidricoPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Región de Puerto Maldonado 
