--- a/html/tab_diagnosticoH.html
+++ b/html/tab_diagnosticoH.html
@@ -2,15 +2,17 @@
 	<div w3-include-html="html/tab_servicios.html"></div>
 -->
 
-	<h5>Diagnóstico de riesgos para los servicios hídricos</h5>
+	<h5>Diagnóstico de riesgos para los Servicios hidrológicos</h5>
 	
 	<p>Considerando diferentes maneras en las cuales el desarrollo puede crecer en la región (<a onclick="openTab(event, 'Escenarios')">Escenarios</a>), el riesgo hidrológico se evalúa con modelos InVEST (<a onclick="openTab(event, 'Método')">Método</a>). Los resultados ayudan a priorizar las subcuencas que necesitan intervenciones de políticas de restauración o protección para evitar consecuencias negativas para las personas.</p>
 
 
 El <strong>índice de servicios hidrológicos</strong> incluye:
- <ul><li> % Deforestado </li>
- <li> Sedimentos </li>
- <li> Escorrentía superficial (ES)</li>
-<li> Flujo durante la estación seca (FES)</li></ul>
+ <ul>
+	 <li> Recarga local (importante para las áreas rurales)</li>
+ 	<li> Flujo durante la estación seca (importante para agua potable) </li>
+ 	<li> Escorrentía superficial (puede aumentar el riesgo de inundaciones)</li>
+	<li> Carga de sedimentos (puede afectar el agua potable)</li>
+</ul>
 <!--También, notamos cambios en el almacenamiento de carbono.-->
 
